mon/OSDMonitor: ignore and/or remove pgs that shouldn't exist

The update_creating_pgs() change is there mainly for clusters that already
have an invalid pg in the map; going forward they hopefully shouldn't
appear!

Fixes: https://tracker.ceph.com/issues/22847
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit cd013ed417c0317da0249c6360f16a26894c82a1)

Conflicts:
	src/mon/OSDMonitor.cc (luminous does not have d0a477bfec5dec6d70bb5c7de918f8258b9116f6)